--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:RM4cmAHz,iv:elWi+x2B2KIaq8FRLv2yWg2RzIIOH7dA/qJeSWcc79Y=,tag:VpV3jGuEBLY4+BtEnOm2nw==,type:str]
-ansible_user: ENC[AES256_GCM,data:nCouFPl0,iv:HVknYq+COVFOxXRWQBjSm0DbbnagCqNOJSUn8/A/HeA=,tag:5Q0YsiOvnFPonTjWAD0/Ng==,type:str]
+kind: ENC[AES256_GCM,data:q35NzbNd,iv:wReBMGUGeY0Zbsu7rHp49F4lflKLkO3sm24SSWwthDU=,tag:V9viy85bgm8pPBWAu2OJWg==,type:str]
+ansible_user: ENC[AES256_GCM,data:gY7glR4G,iv:K7gZakJEWyJLL0ZvoPBvHKAOl+5RvGq5NSBkDC1V40o=,tag:Xyt+80k9ygvsxEKG8FKyEw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArWHVXZkdsaGtpdjRRTTF3
-            aWJUM3ZPZW4rWUNka3B1dUtwZDBlQWJBQkFJCjlEZlJMcDc3TXlpNHRBazFkYmR6
-            QncxQXJBbVZJdHlYUnBrb1l1SXQxa2MKLS0tIGorVDA3VE9SWS81RFl0UzcrQmJQ
-            dHFpaVQ0WFFNaUtqR2dCcDN3RXltQmsKyaEzIE8oIq2661Ej1geaimUoZ13c+a5M
-            x3ag6aUKYqbyRogtxPX2psYyqQtDktCbwQg1/cROa66qymnUd6on5w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArMWJqVHhkd1NlMWR3VURk
+            am42ZFlDTmFyWUlXbXF0ajlwQk1zeEZ6OGo4CjFqc25qejdJM3p5V2NGOEpkNFVn
+            d1pzYndQcGs5REhVMzUrdkV5VUF1d3cKLS0tIDVoMXhPRGZrZ200VkZLVEpnb2tV
+            Qy8vQVRsTm5CSGJiYU5Lc1pyR1FkK0UKLriEMqdz2ti9WIN5OVlOA3W/65bu0nWk
+            Z5+fFTl3AiUO+mcqilqA0XxZ+QxDoeCNA1MMntGI/mTVlDdTFScY8Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:ZGehrdtjBZ8IPTDVuqHGzcXumPJedW1eKfC+GpOJlEc8MQoatoQFRJSxtzokpdD0+lxvQxVGG+r3BviKR/M8MVhaKToOu7e8tM6GExJ7gLSEchMqsQb/lmTnstbl0xdg0RmJB4Edw2N64aSuwNWOuskaZHnDPtgK5/pQ2TBUzUc=,iv:9l89sOFRGTlwPQai9PRh60LyaxhkegzVpD+YHahqLSg=,tag:1UstwwP+5liSzHtizIr5zg==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:on50MJnKw2okumTu5FqNKC65b307I2xup+wDGWqJWUryJ+xJQUC2K/tLyq3/1m1znkH+0ZaRvZkCJttUiB3/TQJ4zpJ80AjoCpYj6NhQ7Q8bJ3gFAc+pS7+qHj/4Wqoek5qv5PACHSNmbEvaqz3sra92vul0zu7IMhd3rYXVV+0=,iv:nkDsK/uwcghv09nC1AB1w7bNAfk9x0y0IsIYxeEIVU8=,tag:T2/Xft8iU+Cm8a2tVSCa3A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
