--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:UoIrY6q5,iv:qc3sqn8N5O2HLG+cKKCH7UxLsZ1KTOGFGpJMnbvspgY=,tag:ztK96ptpBhJiOA+vsUpefg==,type:str]
-ansible_user: ENC[AES256_GCM,data:m2cxL2vH,iv:MRTm5B9vrezek6FjFp2CYS/gM/3z2ENZtV1pTnRcfNw=,tag:ISoV8I8L7fgAnJxEvPKldQ==,type:str]
+kind: ENC[AES256_GCM,data:/I8PbNmj,iv:UUMK4QAjyljT0Oxz7LCL4WPOnL6TizR01rObA8HSLwM=,tag:MjNP2rxX6Bs70tk7vna1OA==,type:str]
+ansible_user: ENC[AES256_GCM,data:uhYvRCEM,iv:xmBxw0w6+Q6kVumw1g8XRLXNMd7zgpivUju5FQkofKE=,tag:4bsi1aOzP876uViCQQ5Iag==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIMEg2ZUlWNFArV3JEUHRi
-            L2NEeHdzS29pVllLRFk1ZmxQWStNYVZqRWdrCkNjaXIwMXZIemIxb1djZUZGWXF5
-            b0VmeTh1SWRoZjlRT1dRR2x5bFNzTnMKLS0tIERkT0tkcHRWS0IycVQwelMzVWRZ
-            bEY5ZGNEc3RicFM5WVVoYWxlT2YwSXcK9Dsxt32wIlUs+FajCAVs4eVGydBIAOBv
-            ZnOaH9Z38Wr1cQ5v1hmgN9RyswNrA7jctm9A0Zj5gVLMmRFixnM/yg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlcFhpc0VXWDI5YVQxMDFY
+            MzFaTithc21uK0JVb2oxWUh0Zy9rbERxRVVZCldVQlUyZVFvcHNKVTdma3FMdmNl
+            eTVmRHRiMXMvYkxoZWlQN3l2TUE4VG8KLS0tIGxXZEJtMTNjalQxWlJLTHg2UHEz
+            OG9iUUU2VldDREZpeCt6UmRUN1dTbU0KCGC31laEuvT4zxTjcvGtNz09xTPR050c
+            USSmb8YIRklKRaUFujVJ+Zzc6njc3koQ+yYawg3TtiCeZxUwEJLcpA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:z+Ej9XBbi30tvS9+8kWW1xWRbpAxRPillZ7wSzG2snmNNOBE76FUsw4Ts/QxU5pgUf3p5Rs2PsqjMSAIo+IrNU3F5GzIFYQ/gpj/VpaGpsCVyd9LNBLzBMKLSVpsEtkiklMuUyIUP7oKs9gHaMba+09LdNu+xUQ3hSDOr+jNqmA=,iv:ZwkpoQjRs1sJo8F+cHB5atXquM9KQiRvkkMNZGUWuIg=,tag:B7s67d9eGAS8hB1kRXWPNA==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:iFS3rQULohLjdHP2T6BcBPJBhOPtCxzSvOXY5uvX14pPtLN2RjCxECOl0xoGExNWRUXeqsHFs5hGaoEO7L0iPODEOzQ2C5iKQ2POvzWDjiy2H+30TCwgpWoPCOVrcQokpb08iCvg77wgi3SNyLLs/iSNqZT/zR/xJZevbDiWd4E=,iv:CozyMwcwZU1+X27iVoVIgNbuvJwgit8+8YUxQf8QUN0=,tag:TkplF1M6neefFSX4mAYb6w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
