--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:DH81jdQz,iv:0AGyYFaqTvPeAXM+Is8v2KDrhHvtC7GSMVjzf1KihZc=,tag:2ieFnl8iNYZvTxNk03iIXQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:hWPLmhAb,iv:vGL10OLGqnZtKgmHPijLBVOcD5KclH8D40uOXQvmx6s=,tag:foX+W5oC/l/ZVjTbLIuy0A==,type:str]
+kind: ENC[AES256_GCM,data:Ar1YLI6v,iv:d8OAP6GOliKrIgPFLY0ibvtXotllDHd0KPiYbumoBhM=,tag:ATMOe/uH77W88bJ20rKHBQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:9d8eXhf5,iv:waM9pvpzfHbVnT3q9FKAla1Bo3dzAWsFsUE2NAUYr/s=,tag:PeJ2+xRCpJJwHCaY6yPCng==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBURWtYRHZrYXdxenNJVDRX
-            MnhOYWQ1TEZ4REFUWERKUkowcHc0cHV5ZlFJCkFwS0pIV2YzbytOM0p0UWZDN1BF
-            L0NtdjNsRzdqeVhnSVV0OCtFZUo3SFkKLS0tIEZ5eVh5ejR2TmRITng5UXEvZWY4
-            Z0Z1dU5rZjRwUHliN2M2YlhDU0ZJNU0KE6I9KnzJ5VlmU0SXV/w0MfBoGhWr0HJM
-            BQEc9yGJoX1/tWAcYKOfZM6gRD1rHZda4FawRIXxgy+ko60hbktrWg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6dEdGMk5NVk12ZFJ4NVJw
+            dmRsb1htUmFTM3pUNUdMaDZjTEttYVhWeUVjCnY2Y1Fqc1BsclRSVnZiWVlWOElq
+            R3hueXNDKzlHME0vOXY5Tzl0Zmx3RDgKLS0tIC83Rm0rcmEwRCtsZ2wzUEVXOVoy
+            U1Y0RGxMaEYwLzlraW9HWFZjZ3h6c2MKJ4aDAuWzqbp/yms0MoyWgPjDAX9Rajth
+            /J037QAJwihL1SfcC49r4nCjOXA7Pzr2mzON88HWSfc4+6gd1STYFg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:aZSKu4wcUUN5tdi13lVawFXgcQO42ays+WnVfUu50IbSKisu0xNN0uZ0DEsrAe0fMSlh7ILD6Ho8Dkoug2CkW067yYiJgCSug8mhrS7sF21GvFBSKC9BJzzhfkwI14jxaN6QsNroit+gcyeR50+V3S34Aqau+RJfs6Q7e9rnX2U=,iv:MCinXnlwRpyD8htHXDmN0TvX+QojbfVXBavVoj2XFkc=,tag:qXwrTxQ+/NpblU0Lz3gGJQ==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:ZoRcFlKWX6qoDpYcKgn74pzLeys8mwtvhauSv4SluJkywbHT99dL0giunmdJVqgzMxWvfHchUBB2mnVbiIvEKS5rSqSq/+Vzkm0WyWOmlo2Ij1tpb9UfwIm/4ppEhvdN3Z5f7tg+/qVadFoqKGUvBK/6Qv+FydhwrQOijXFv04E=,iv:p7YN+/joBeLk2QktOyDSaEx80wtL06zUVsOg8C7FZ5o=,tag:xprksB3fKppvNn85PMBzmg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
