--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:hc9iTYaH,iv:Cyh5/Iab5dq8OamLYuSEsfr9v5gmiszVtivC9W4o6L8=,tag:qoLBXqHvhPRLazW9UxyRHw==,type:str]
-ansible_user: ENC[AES256_GCM,data:Xse05I9d,iv:Ufe2o9MOmpH8vu+Sim6RBIe0v5e3BLekBbRPE6jhRus=,tag:JehX9zeEbEctbWe1XY1OWg==,type:str]
+kind: ENC[AES256_GCM,data:N5hyfqMS,iv:3mP7gxghYLvdxhCWbM2+An+AXmi3NyzkWusAys67xVU=,tag:ut8ZiGD2ejG+u1yeg2lhEA==,type:str]
+ansible_user: ENC[AES256_GCM,data:hoTbWR2v,iv:5Hoj/j/SHYtATGMeV1z1xGlDshD97LkoffH9cqNTM2Q=,tag:JIQfjILS3wr3n/Z619W/EQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoZ1huZ2lWaWQ2Wklpb21X
-            Mk5wcXBKVTVuOXEwOU5RQzZ6QkJ5enpCS2o0Cm0zU3JMU2FJWnV6aElEdEgrUklX
-            dWJzV0hsVVpud0dBUEwyby9RQ2c1K3cKLS0tIFNid1RSdm1TUVI4RkU0UUJZKzE2
-            L2Q0b2VEVWRJcHlHN0NGNktnQUZsUUEKREhywygSytqnprPi3rMb0i/XsoMjOzh3
-            OJyowd7ArrVIQaoifSQ11aNV2NToHJv15E3GYDo4r8RG68Sypz7rJQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVWisyRUFQaGhJT25OTGhJ
+            WUVaOEpsaTk2SUZ0THFRMDdXS0Zha2Q3WUU4CkZOUG8xUnNyaW16SU56b0Rqb0ho
+            KzUrMnlJaGRxdkJNZzliQmdTUGZhclEKLS0tIHpyNVBKZURaSURxVml1ZTNZZ3VV
+            QW9kOGtrMDdaM0I1Y2VKSUdDaHhyMG8Ku0vEqwn3pRG/BY6P0Ru4tlnhur25gj3X
+            DVhG2a0tst/fY2UL28Ofg51w8BJfJXPfURmIP1aktQqT0PYiEnVE7g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:KOHN2AKTd5yRLepZiFx1aHBK0Eetql36EyalNwb/a1eZkvF3DLOV0Zvr9mlRH0A1M/Z5L0Yt1eO9zf8zwBAuC5lrRtaYpeBoHuvT7L3/nyNwmCKxWuRhxIgv5m6R0sTkYV98PsEuQQs7XN1MZieWrwM/xq43rMXgvzDxHxDv0sk=,iv:e+TPbP+gCYL+z8XQWJbKi8mlTaGJPGnWu5b8W2wC84o=,tag:f+zEfpIZQ1Jh2IMrm5/A/g==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:gHi/ESPfNd5RtC7bL/LrP8A/x3redUJwEces1grW6QPzklvLKS8tV6JJDY8LrgZCqWK6d0aYay0eGKRH32lKVmkZ3N/3QENG0/x8B++KLHS/YXpx++0R5Vo3BUUkAGUT29eD4/2HyHyZgdVEM4HDXirq0lGXIEihvH+n9DXHYcU=,iv:eM7j9UH7DtDsKBmqWWKGdqfwQUMTZJ/ISXLpkO6nrNk=,tag:EDz9VokrtSmFiJOB4FJN8A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
