--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ZC/AKV98zhXhU3egT6LLOXoRsOF0,iv:UDAk1rPMMM8HqMn8Dels6h7avcnd2WPc3Dgh4LB4wZg=,tag:FnMInq6+MaR11BtW2Tev+A==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:hgPNpVPojamGUpJAP8vIxEXzg2+Z7nP6qjo7qZR4fqQY0V51Iw==,iv:vlX4ciih9cLzBEm+uEsAnH343B/qbE9kH5D9SwKkqYE=,tag:9vdocws/oZgREBPESBRD2w==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:aecu1tYRF2AYuCE=,iv:9p3uX3yTFavs4bsUf8iA+2j29uEfs+W5pGLQgeE6GXs=,tag:5760Z7S2BH6XdzXO3nHBUA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1n/rttgPcfDPSapgbJikvGJB36ks,iv:zs2APUV3VlD5wVoopP3+aUrujOtMJpOo2IES/Yy2Vqc=,tag:/aWvlsbGnwLPl0p0EE+Q7A==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:CLflzkyKic5lg1hkQrQLUrMrDnvwRbYFmnvnp+Zo0dzeyCCaUg==,iv:Da6wHtYtXlVy3/fEQJSgjncFaMb3qJNXsXHyoRXrCQA=,tag:Xnb3kTSkGJhpvMNDYwcK5w==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:G6+HJaSYiLRZOoM=,iv:FpH62c6almREfHheMVn0S3DiELo3pmemX4NL3R/gkSk=,tag:lMPtslKMAtGAFDeQZEIZSA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrN1dEK1ZwN3N3WG01c3dT
-            NmlwZkRlN25IaWdTVDhNRVJZZkQvNzFCaVN3ClpFeHJZNEcwTGxObWE1S1dXYmRG
-            STRZUDV4VG9EWUd5YVE5ZGhLdy9POTAKLS0tIEMzZzJ1dm1LLytTd296RStJTzBX
-            TGhtMWtJeTNJMlBDZkxYMDYrUzJLVG8Kzxf7ADvOHtjACwgyS3YmiJwxHWLE5zZH
-            eyT8CHGkPqAsATOlVA/xsT1Cr8861Ko9NIhsnFPOZLPSg+JC5No5XQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdjNHclJ5d0kxQ3JkU0p0
+            N2xwdlJFQTJibmRCN3ZLTU0zVGFsNDR3YlUwCmcrVTF5VWo1eHM2M2xRZGVxc0F1
+            L2NhQTdnQ1MrMlZjaWdtQ0R4YlU2bGMKLS0tIEkvTzIrZ0dob3pOM3FERkJRbE1q
+            aDRRMWI5Sng1MkZSZzlBd3VYbGJXN3cKgJA36gpjHoYta+b/vYvds92xzs1wpYEg
+            EVRAQ4DYr0tJ8Rb/259sj1we9HLQZgTajDze1+WUQaw2IHTMRtIn7w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:ZCtoHsIk1Pcbgi029yXH1sZERwSD3JIS47V4Tl3V/ytZ9K+Z2V5Vwvs8uABrmCiatdqrUOe2wH8a6UZ2oeQ4HkNx7YL98Tg9NbGgVnPEcaaPb/J+nLJUYCzVb4SJHlT/uZ7Shxmsdh/gnpFQLL6KHVbdovpcfc+5wA7RwTd1Qwo=,iv:6xUm2TITOUFAvH+P9Q+DMphSzr04puvpwnRV2oQwfZE=,tag:DluWhSDJWrMe/3uMYFaWdA==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:9AdjD0GlnyeAHaBZw9CE5pTLmYDEilPRJzqCxmyxROrFvIjG4r+qGeQ9J6hrlfePXRJX4gVg0fvAF2+iDruoP4Tzcgmi6ySJWJchY07A5Y7mzmCwuv+YcC+IaFeFn/noyb8VWJaxUavUmG+PkxXkDuakxp6MrFcw0dsY7Xl/+/A=,iv:XJRlUv6PUVB11ACLVXJT66rosCGCfTEQ1RBmy9y/aSE=,tag:xvE11GDLMdT/xZhbjYhrVA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
