--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:/5lH4s20PuzSe/U=,iv:ZhYLzssvM8ILUlePDyuS2VRT8PIVTg4epyXvtVcjauo=,tag:yWJYqoWVNoU4kr6N2E0szw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:RpukfljeS1Ucpjk3iyYAgIf92zio,iv:LgODa+rWBnq3qQfd7Ds61LfIhEqaseNWhLKmWdqXMKA=,tag:SqxtowjOwFIfF4ib7uhatA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:tPbQeIk8+PJsbRYdAhJ3WcE9zpvGEoim3kVRs1BYVOznHjy0jJYrF5nAe61NVUEGBV/c76bqv0/6nznrf7SPqWJFqznDl90=,iv:xDgK+lvIVZocT16mSjx7qUWlSCDXPMvdu0K/vPK12qk=,tag:PM/DThyOFO/R0YCs5FYB/Q==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:qMMZaeC0nosS9pYrTBpk6XFb01bSFperxMUMQkMaIhBcu5o=,iv:UFI1VqxuO0p/AV517vLTwfu1YmTq69oI4mme0zpnH+0=,tag:Xzr9TqAncZSVsiO7ic3emw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:NAnx4UsiXeAKQQdsSDCS609R7A==,iv:EvNNhJQ79CK41wS0MvQMx3EEC0U0qdye1XaGoqiZyuw=,tag:8IThC7yCNeBeSN8wvlGCjQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:VYwFhBL0fXrGutYfc14j05y3ui2m,iv:zd98NMgM6r7BuWqDb+TmLsM0goObVUwUHV3RkzOtYNk=,tag:T1l7sQT7CuK0tQyFgmSvaA==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:pjIqpWMdzlE=,iv:fmDe8a6Frlh9v0NLiTAvFCUlJ+mksPR9hNGk3tIdB1o=,tag:oPM6dltS/sR3Ev5YyCz4kA==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:lyVHznY4dC4=,iv:KNyMa3vPxmAtuKsqO1zZ4/RgIR3niVmFRUMUJL6orNc=,tag:k+Hj3aJ1RjB4FE6sk2QbDg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:7W4VpVY2iHSSba/vKoNEhHg/nYCnbuNToOegMBpMlCFlK9E+ZTPdzn/BEo1uoM7EqJDwTNmgZZd9P0jVe4x8oQ==,iv:M84PiVPpBO7mv2FnJ6jeMWbcMGZ/+40IFWPKhv/2IMI=,tag:2DPNoBrTxBqqLowQKZr5tg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:HN3qOKdzgScuIetxrSXTbtZLY5Xzrxgv9scHVUNuDHDbN69sCCLuVaoV0II/lIGlFr/EB5WD/ZbAxgszuHJl5A==,iv:7buwzkuzFXJC6py4mDW/piznoC/fBOKVu6jMwuAII9I=,tag:gN2W+hP9EOYHq2ZMplnHaw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:bldi5d3T75Yl,iv:M5e3rWBMYOmlk50rcscxY/1ukyCp6LRS2DDlmMQ24gI=,tag:dwtrVWDH3jYMN/uxjEj4iA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:u+Vk6+MYk4io5PzPIBcZ,iv:AjF1lDVwx6Wmb3JtusN3MebaFlzmRuMqWBMnIh3Hu04=,tag:AkkYzpPRNLydaztjyCy4ww==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:+j34lSVUvog9FKDJ9/+9ocB2IRALDpkuAwodG/NA7dAIrE1vM9PWUZ1A4CIIsa7Z7mU=,iv:fjrNylr0AtE4dAxgpYi2aoMBi/Czg9+X9TUX/pJYq48=,tag:i9PpWlWrMn7DeIdEiBqBwA==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:Ro+UBWXzWJcEU20xZkY=,iv:zv+MaRq/u0Q32frD3NMpGqbZVQCA+Swl5UukaerryT0=,tag:vSnCL53RW3AMn/C+xDuJdw==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:4VvDc62FKvnILlIwTqh64EKQ5OA=,iv:kfZ+XvjA8h+DWPXxvrr3ksyPiyRC8aFIVpsnhI7tS3c=,tag:wb4Hcv8uzB6c4b2HAq/o8A==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:hLKyQ0V8biE=,iv:ryFXn5Fq7c8iQaxEqH6Kw3iNgQXtt9cFv7JZ5CMWIQw=,tag:ch0zPRSFwaIVCpwhkX7ElQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:Iez57MBBoVFRetvhIDamjvus5docXvkWub1xTH1Ui1h6g9ngJw==,iv:Hd2RZuLJ7l7ehAODT6t4ADThKOs+6ppvL/hFORKh62g=,tag:gji95x/Ks7mPzKk0E3jpOw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:GBAs4nU8Ar8=,iv:D8bHvTv9en3rPwkdiJ6D80YREuTHPd8r1oBwwvQDur0=,tag:ifNotqzFqk9KEZbo0CBCQQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PLLN+PxL8aY8,iv:WDzJdapCXh/6DHWPsYR3fnI21KAmpmSk3He4447y8KQ=,tag:W1E6Hh39KEYUOakYrW4Ggw==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:68KLTBUpWQ==,iv:wWjjSRnp2EZS0uEyAnr1QG61qRxsKD2em5OI3ps46yE=,tag:mKL8hbv3bIrBdTNC8ShztA==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:s5bJDcV9XW/R,iv:uZQ/1Mdpot1UIWWDZZ3h/h6F16CaahJAY4Ryu7HjqeU=,tag:xlEA4UbMRVEe7SIXhtg3gg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:AReoMYhF0sGytf0=,iv:s3LbY6/YmVPJH5ZYepSM7oWg3KjvclOFUbpqd/Vohc4=,tag:K5698OPV5qRoFOzVStUYhg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:GWocjR2uK/6+4Mglf1c0NmOGVMFp,iv:Y6jyroDFVDVWAXW8AyjwanwPflEeX7NaEJ2xfPDnuI0=,tag:xowJ+Y53+cmtRUXJfmMYqg==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:fxvq3Q85SdRK0wMjNLBemYeLsW1gOheBngFHv32VPJ5Ow22Ocxtt3uK5h6yzEYD/UdVXFWUpr93ijwdkZ50gN05Hvjbhc+k=,iv:p2t1LRaxdovca8N3v1CHZ50qRP7JNmMsP1K9LQPiqac=,tag:YSvpNnJk9PtHb6D4FTIWkQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:NtWTOOcbZrizk4Am3EANhFM1Lbc2QduMq7AuaXnLAiWxkLo=,iv:2ssMTDLoj+UUb0Jm0EGu10fyDuzNjlWOsOJPkZ6Nfj0=,tag:wF+clsU/7ZA+0RDksYRIMQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:yTZpbIPakxGJx3mFyALZiAdj5w==,iv:bugqu4AC7J62ZC+IsKCf9Kz5FXdgylv9ps5uTWSKlNE=,tag:DstzWzAHyN4W/8A266KWIw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:XlX8PWfazD/O1u6G805EfFNAGTLg,iv:1mCdliLJOaUp5YEMOePUNmQfWgCndk8N+1CA3G9gR5Q=,tag:WieWFPbt0aTGHLq3cERM2Q==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:y83/e9crc6Q=,iv:tZ5LQfJuPNuRgM/ZC/ErRXqS4KdC2yhBjxL2m3Gmp80=,tag:4t+oWgjd8A4sfl7SpPq2Gw==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:1DrVNwm5cwY=,iv:V9k802EwfFGG5U7tjRVG8lQqqX7RlmT4ZgdPC6QY9a4=,tag:o0svbm0e3X7wVMM+Qb8Fkg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:Fvzo9pUAP5bYbO5R4ePCrQaLMmYextmXxVp6BMZ54MavVd4Nv/JgLwFnlkw4QMHqUagSR/U7o8wo4RWG1XYuaA==,iv:eIxn6orMD6pVpb5pMrHLgxdSjc7w3cMr5pqbZo15FzA=,tag:Ktp/VSkwtN7ELNww0z753A==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:SXYX6HtjPc6ZIdfit41MG2vG02waY2phuJUWk4OxMp1nhj8916BjgovK4OotVG/8/Gm2ssPxq2Kbk2qAlXHrew==,iv:F6YJdFFPbEkWtq2T0POQBjrDoCbh6xjDnzKYvZNiZRw=,tag:1rMNknXo0WG3lce8t3mLtw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:jYQUyxlIJ9DY,iv:f/KV0DSx4+MflHjx66wxFOY4EH144BZweFkT3n0Fosg=,tag:f4iNmDbVZhIfCixbBKjdhA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:J/JWF/sxnL92BHAD0QeB,iv:DW6aq4M6THT6gjr6Dz/SX61kUfcaYURn5eqRdAymHuY=,tag:ji3S9OCQoiaxWiY+MgPJ4A==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:JXRHpvHJaAkMnjQEmkW9A/FXp47GN8SM2SPsu0f72BgNp9I6WE/w/pSKo+X237TRF3w=,iv:/r4UwtsewR3T6XcHS9q/pM6BRXZqeRijHiw/qUnCFM0=,tag:AdPAgqnlLitF4YwjlTuL9A==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:evm6FgHPCR2fLCoxYb8=,iv:xvqNpfd0mIo+mvY2bql2LAB1ftXNO7F9teXFx/2KOog=,tag:HLdw5FG8fyGt0vvgkqmLwA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:JZ6elvMoke6NFWfyzMGh1TqBObc=,iv:n11kPcWgctWj9Ezm+9g7ZDvZI3oPdCuOw5WUbwqertE=,tag:mXRssFbn8hpoc5ikJCS34w==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:YIxonCJIOqQ=,iv:T+Nj0QZw9oPGE3EeYZIeVH9ApV9xrVbsjHZS/72GNfY=,tag:tCSTsar/ELJQn8vaFo98og==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:Wyz6QxxKODeEiVg1rx/hpEH6n1YW4CFBpXVJ1DCGTCCRGhpO/w==,iv:v0vwnreiQG8HeoxfwFLw5y/mweQN5+y89Y8o7+Ryksk=,tag:ZknoK1Wg2irpgGok2FLSRA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:GqnXxal0Dlnq,iv:kpvNQAZSND7DdpyccIAlwW4IfCvh6Ss/ndZ5fIrXtIQ=,tag:0DikDyZAFp+u7KRqtxtD9A==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:8kL9AbrW7Leb,iv:WU5LiFWY1L9slcDubKh+h90xvLGi3AGRqdRzU3nb8XU=,tag:Bz3nWCNy1MqvV/efr936/w==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:AsZh7kkufQ==,iv:F6nWuGG04af5pz49yMuw5UHfsT8Y/vJQ/k6rhIDkZB0=,tag:OHcGUQJU4Z0JWufyod5Mzg==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:8TRqQdggU4f5,iv:ULdSXDSNvRcPemx2sarC+m7Av5lDbGHogWq2fU0vnbI=,tag:U5HfXU1eiyHTPanNX59Kjg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWL2ZlR3ZHbGVoQUZieGFW
-            eVN1bDlpaUIvRUJEUFo2MGErYnBVbVpyd1NNCmk3MGM5QUlDdTk5Rk52dnRwVm5Q
-            bGlmamsvN25sTk95cWNnUVlpSVJKcFEKLS0tIDdXVnBWVHRWMnhYb2cvZFVJVXkv
-            emxubzREV2d3NDYrUWRsbE1JMkFnMTAK3wNaPGePuXtHIOEQrL7rLmeYQINOSmGm
-            3K803BaFjiNN3VPpt2rjRRLwCQ653wViF5hVoO96rHXGwocuGHi6sA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhenVGTUI4RWZtMkd4b04x
+            RGt0bC9OcmFTK0xDcmZxbkh2V3FmbGF5UUVvCkpYVkk2MENZWlpzOUgvQzRBbHpp
+            SkRjdWRGNStMY1BSM0VKWG96YUxXMzAKLS0tIGEzWjRnZWt1TnlDekF4ei9WK1gy
+            TlJpemVaaE9WVWdjWXNSbVJlcFVGTUUKveDMwDFJnP9O6Aeb6CcVRj62H7UstRRa
+            REjtjc73Dg+6XMJ2JexyLzo+j8SDVove1xZLdHQNUNEi4ghide6gwQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:ItPXYtO74lGI2U3xaLN2t5UPhWe6VLTTjvOBjd8//46CVWIVV9cyyRbsvGIju9geOxqpxfeBOfPyYXgeZOP/S4td5arb806PqKKpHWthc8gEL6KG1EeLaImQ3Fz7lgbJXstdE1PuyPZd07OJOzZPGQdGFK67VFMq6UeoaGAXNeU=,iv:f0kJ6QEtpUFXTKS7Yy/tWUJlRs87e8KyKtgvaXyZjvM=,tag:wvKVt/xK3DNyoSvdaEgkog==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:PzqzV2zyN9/oVFVK/F2Cq7eQzglYCgcaVmDZEHOn86yhA2tZrvR5FJ1SGVEJfu1DIYwOCIxfJHQP5L02DUw72L+MXZGBZGr+5NOFv51AFu1zgaoVOgf5RIVmxOIXWDlT7/3Hwc8ZZjTaVAoP0oOVkYL3RlxWtrY7U8BFKOj0c+M=,iv:wE142rpmKVuCk8GU6irXJ0JhnaMSBX3yb2NoPr5ZbvU=,tag:FXib4H4v1/dm7EuflYSraQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
