--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:fN7+7rxw,iv:YXuTCmHqqCT7xMO9arRFx3fuyubnhXEj4qtoq3VDaYE=,tag:pXTYDJfXzWTvOdmNhgWoFg==,type:str]
-ansible_user: ENC[AES256_GCM,data:mc1LTJlK,iv:rivIpe1WYwBcSSYEcxBwIS+zoOllK29qkHzFSSHzehg=,tag:fhQVatTA7gCl5xhLMieidA==,type:str]
+kind: ENC[AES256_GCM,data:BHomp873,iv:RIj0hEBjxj1SVcbBaHz72tqp5CFJMbLKIFFfKiufxtM=,tag:OXjJ6gDfoL+XuHHjyMm6ZA==,type:str]
+ansible_user: ENC[AES256_GCM,data:eoqr1lOQ,iv:RN+ehZ/oRdYPpE06WidkZRM5gUU6EBBoqxXkZDb9Qwg=,tag:LFi6s/CPNOkvGFKZwhvDJg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Q2E0cHpZN25kYmNUbGtD
-            dzB6V1d6TXpUNVFjU3hUaWgvalpDRHBKWTNNCldOUm1xK1NsSDVmVjJyQzg5UHJy
-            UlpVS3MrSlZFTVRubGhpTWlMa1FaQ1UKLS0tIDZNOFY2ZFVjL2h4c1owUjhDQkYx
-            dmxYNHdnQ2JrWHJTMGl3cXVZbnZoZTAKz7jcghde9KfWBc+iR21N75gCXZE61b7C
-            E/Et1zoYb+nRlkLp+i1rV3E66yIBGm1xw8gK0D/ZlMk7EDKKsGdQ9g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArNmt6bHB6Z2thWVdUQjU1
+            dU1jOG9uZkV5YlJRWDF0dFlYdnhyZVA5ZndzCk16K2E2d2s0Qit3OGpHSXBJd2lr
+            d1BhbzJ5Nm5mOTk0RUJ5Ykg1MXRMSDAKLS0tIE1FOU8yb2Z5NFFsTXFUSkFMQkVQ
+            aXlSSXFQSHlXQmo1Y0J0TmxZWXZaTUEK7kCBrDviTb3512T83P7baVUVkBxnGmbd
+            kyJdHZj7+0hgmGoDB+akdPgdlj+9sCT0AI+FsaqWiVH6LANj06K8vA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:nItvhptviBoEvcXJ4xI/gQdNkrpzA9aD5Ph+UlQmBcdLfw+N+qDT0dK9oksYEMxBkhvpaT4ujTGNq194cn4WN1TnKDzG7FGFuZ+g1azLNXVfzaaajuh0JMAonKhPi8VVX4UW6zhlxWVS0PTqgnaCF/x33zMmJQC4POF2BwHrghY=,iv:+aspkBIF7WD92HwJ+2gfgzuaCRz8QajLHhNEYbvFerY=,tag:Yqlsvdyqhpu90fpP8MTByg==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:eCMvWlXCwT5WCMz+IvgSKnKWuaxbrlIdbYU3AIS2aARTEiGnLpWHmK+mFuhHHi3pk1jubOsMG8nIPkMcnQtWll2yzm9gubegHmEPYfUkmYtBNVXs44YWp/T1AhuG/Dj228locIr55B/id3EvKSfxYwlmSz7K27sC3k2ehq0wTxc=,iv:s7apHAXwLydS0Qwa02flVFeWOZ2RsCECz46iZpIdoVc=,tag:WV6eQH8ExF31lon95qIRAA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
