--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:63dXBVSx,iv:+hfEroIFGDbYO0DSI1zQJH4M7DPRxxfS9BXOVh73Wno=,tag:SsyBr8vXjXxdmzOlcSOuVQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:sP3+N1JR,iv:PvqNraPmSSrDU/s3BggXjAVz2CLXBmwTx1cj54cEl50=,tag:/ixhqSz3gZy8MMKXK4kWew==,type:str]
+kind: ENC[AES256_GCM,data:EjxP6RDN,iv:KZvcPQSdkBzWc4ueSYZWBj3oXaVvU2sTgoMQvVi9j8E=,tag:hDIV5IMyhs/Y9hKb6luO+A==,type:str]
+ansible_user: ENC[AES256_GCM,data:Q77CQoLb,iv:KqXzWV4lXu2YwVwl8lxieAiR6iD73pitC/ffDFLrZbE=,tag:O+iHvCD5fbvp+ijdVlU78Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtQ2VhME11d2Jaa0lNayt0
-            SStCYkg3RzRxdDMrRHk0NnE3K3ovTzhVTkQ4CjN6b1hFeUZBVUZUM2t1Y2FnZWtM
-            cW4vNWNEd3VmdndEeG1MOE92bS9abHMKLS0tIGFMOU9PaHBkK0FhVkFkZGRLZnpp
-            WHNScVdLcnZSWmlEa0FPR3pueTFnSGcK/28BG5xk7gIbv3qWooi3uFZ2VHFW+M7q
-            NNIu6B3XOgLR2mY2IqhGgYe5AQk0xuhCq2K5jFgyIeMW1UdLramQQw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyWnhHdG10V0tCaG5mS0dJ
+            WWt4Y1Evb05UL3R6cm9MOVU5N29ONkJKMlIwCkVaQ3p6eVh4YTBhV2FJMzdJKzBw
+            NGplcnBLYno1b0thLzVwTzFpQk8xSGsKLS0tIE12Zms4UWxBYW01S01jdUM2c0tO
+            VTlzNG1CVVBiUnpvd0E3RGJTOG9HUDQKmVzIsD7ywuz5fAcY+bA0pYzjeaG2zQ6v
+            QiOa0VMEcaZmZYVYkBJHy6u9FGZfs+FhZinTCyerLKWDoxv4nMjnbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:24:19Z"
-    mac: ENC[AES256_GCM,data:2MQ0Jhq8YKt8AreHO+XwhiMFuQwQIqb5REzZ+U+TIkfeSbJ+VhfRh/hevQlh/MZA9DqJElfeu+7cRQOcEXkhSEuFFJK/R+m2V1/gEQSiaW8fn3YaHIcAJUeRIfTusR7+BvRaHIJebsJADzcfHXafJxV7LrTvLNsGYNNkU5JbuWI=,iv:TsoZ6xnm/IB/C3Mbj8NWIpMA+Grahtundsp0CppZucU=,tag:KDsmCPdLnfyinUV5h/uC9A==,type:str]
+    lastmodified: "2023-02-18T17:27:08Z"
+    mac: ENC[AES256_GCM,data:RlpE4PBbpf6jUU3Bx5vJSPD+QG6VRxejaUnHcmGtvzmICa41tcTUViFc3NEZTnohHBvFijj2YYkSB/A93uVQHHukocxHDg/3NOOi4i4vEZET5urb4RbJqxaktNMlv8pQyYMIF1DhNgf40qG3J22+o6WqHc7C4ujY6xhYRLFz56s=,iv:xIcd+PiTEqkvK2PrcwQerw33sxW/hGHpeeTBOlL9lf0=,tag:k/QhthCyld9cRpLmIqYQGA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
