--- a/kubernetes/apps/default/pgadmin/ks.yaml
+++ b/kubernetes/apps/default/pgadmin/ks.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
+  dependsOn:
+    - name: cluster-apps-cloudnative-pg
   path: ./kubernetes/apps/default/pgadmin/app
   sourceRef:
     kind: GitRepository
