--- a/kubernetes/apps/media/youtubedl/app/ingress.yaml
+++ b/kubernetes/apps/media/youtubedl/app/ingress.yaml
@@ -2,13 +2,13 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: bazarr
+  name: youtubedl
   namespace: media
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: bazarr.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: youtubedl.${SECRET_DOMAIN}
     hajimari.io/enable: "true"
     hajimari.io/icon: mdi:subtitles-outline
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
@@ -17,16 +17,16 @@ spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "bazarr.${SECRET_DOMAIN}"
-      secretName: "bazarr-tls"
+        - "youtubedl.${SECRET_DOMAIN}"
+      secretName: "youtubedl-tls"
   rules:
-    - host: "bazarr.${SECRET_DOMAIN}"
+    - host: "youtubedl.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: bazarr
+                name: youtubedl
                 port:
-                  number: 6767
+                  number: 80
